force-app/main/default/objects/Ireland_Coaching__c/Ireland_Coaching__c.object-meta.xml
<CustomObject>
    <label>Ireland Coaching</label>
    <nameField>
        <label>Ireland Coaching Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ireland - Coachings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>