force-app/main/default/objects/Ireland_Coaching__c/fields/Additional_Assistance_Offered__c.field-meta.xml
<CustomField>
    <fullName>Additional_Assistance_Offered__c</fullName>
    <inlineHelpText>Was additional assistance offered</inlineHelpText>
    <label>Additional Assistance Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>