force-app/main/default/objects/Ireland_Coaching__c/fields/Additional_Assistance_Offered_Comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_Assistance_Offered_Comment__c</fullName>
    <inlineHelpText>Was additional assistance offered comment</inlineHelpText>
    <label>Additional Assistance Offered Comment</label>
    <type>TextArea</type>
</CustomField>