force-app/main/default/objects/Ireland_Coaching__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <inlineHelpText>Any additional comments</inlineHelpText>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>