force-app/main/default/objects/Ireland_Coaching__c/fields/Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Name__c</fullName>
    <label>Advisor Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stefan Pelgen</fullName>
            </value>
            <value>
                <fullName>Elena Tudorache</fullName>
            </value>
            <value>
                <fullName>Sonia Giglio</fullName>
            </value>
            <value>
                <fullName>Sandra Gomez</fullName>
            </value>
            <value>
                <fullName>Sara Pelagotti</fullName>
            </value>
            <value>
                <fullName>Virginia Molina</fullName>
            </value>
            <value>
                <fullName>Lou Debourbe</fullName>
            </value>
            <value>
                <fullName>Marianna Lagani</fullName>
            </value>
            <value>
                <fullName>Madalina Craciun</fullName>
            </value>
            <value>
                <fullName>Alessia Dominici</fullName>
            </value>
            <value>
                <fullName>John Bekema</fullName>
            </value>
            <value>
                <fullName>Rocco Paradiso</fullName>
            </value>
            <value>
                <fullName>Mihaela Nitu</fullName>
            </value>
            <value>
                <fullName>Ola Juszczak</fullName>
            </value>
            <value>
                <fullName>Delfin Tejada</fullName>
            </value>
            <value>
                <fullName>Giancarlo Fioravanti</fullName>
            </value>
            <value>
                <fullName>Michela Concas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>