force-app/main/default/objects/Ireland_Coaching__c/fields/Call_Calibrated_By__c.field-meta.xml
<CustomField>
    <fullName>Call_Calibrated_By__c</fullName>
    <label>Call Calibrated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denis Keogh</fullName>
            </value>
            <value>
                <fullName>Lorraine McGuinness</fullName>
            </value>
            <value>
                <fullName>Vincent Gauthier</fullName>
            </value>
            <value>
                <fullName>Luke Duffy</fullName>
            </value>
            <value>
                <fullName>Scott Wilson</fullName>
            </value>
            <value>
                <fullName>Michael Calotte</fullName>
            </value>
            <value>
                <fullName>John Bekema</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>