force-app/main/default/objects/Ireland_Coaching__c/fields/Call_Logged_Correctly_Comment__c.field-meta.xml
<CustomField>
    <fullName>Call_Logged_Correctly_Comment__c</fullName>
    <inlineHelpText>Was the call logged correctly comment</inlineHelpText>
    <label>Call Logged Correctly Comment</label>
    <type>TextArea</type>
</CustomField>