force-app/main/default/objects/Ireland_Coaching__c/fields/Call_Logged_in_WCSA_ISP__c.field-meta.xml
<CustomField>
    <fullName>Call_Logged_in_WCSA_ISP__c</fullName>
    <inlineHelpText>Was the call logged in WCSA / ISP</inlineHelpText>
    <label>Call Logged in WCSA / ISP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>