force-app/main/default/objects/Ireland_Coaching__c/fields/Call_Logged_in_WCSA_ISP_Comment__c.field-meta.xml
<CustomField>
    <fullName>Call_Logged_in_WCSA_ISP_Comment__c</fullName>
    <inlineHelpText>Was the call logged in WCSA / ISP comment</inlineHelpText>
    <label>Call Logged in WCSA / ISP Comment</label>
    <type>TextArea</type>
</CustomField>