force-app/main/default/objects/Ireland_Coaching__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ireland - Coachings</relationshipLabel>
    <relationshipName>Ireland_Coachings</relationshipName>
    <type>Lookup</type>
</CustomField>