force-app/main/default/objects/Ireland_Coaching__c/fields/CID_COKEY__c.field-meta.xml
<CustomField>
    <fullName>CID_COKEY__c</fullName>
    <label>CID/COKEY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>