force-app/main/default/objects/Ireland_Coaching__c/fields/Clear_in_Speech__c.field-meta.xml
<CustomField>
    <fullName>Clear_in_Speech__c</fullName>
    <inlineHelpText>Speaks in a clear and concise manner / avoids jargon /Clear in speech</inlineHelpText>
    <label>Clear in Speech</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>