force-app/main/default/objects/Ireland_Coaching__c/fields/Clear_in_Speech_Comment__c.field-meta.xml
<CustomField>
    <fullName>Clear_in_Speech_Comment__c</fullName>
    <inlineHelpText>Speaks in a clear and concise manner / avoids jargon /Clear in speech comment</inlineHelpText>
    <label>Clear in Speech Comment</label>
    <type>TextArea</type>
</CustomField>