force-app/main/default/objects/Ireland_Coaching__c/fields/Coaching_Type__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Type__c</fullName>
    <label>Coaching Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Side By Side</fullName>
            </value>
            <value>
                <fullName>Live Feedback</fullName>
            </value>
            <value>
                <fullName>Remote Call Listening</fullName>
            </value>
            <value>
                <fullName>Dial In &amp; Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>