force-app/main/default/objects/Ireland_Coaching__c/fields/Customer_Satisfaction_Survey_Comment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Survey_Comment__c</fullName>
    <inlineHelpText>Did advisor say customer satisfaction survey would be sent comment</inlineHelpText>
    <label>Customer Satisfaction Survey Comment</label>
    <type>TextArea</type>
</CustomField>