force-app/main/default/objects/Ireland_Coaching__c/fields/Customer_Satisfaction_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Survey_Sent__c</fullName>
    <inlineHelpText>Did advisor say customer satisfaction survey would be sent</inlineHelpText>
    <label>Customer Satisfaction Survey Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>