force-app/main/default/objects/Ireland_Coaching__c/fields/Empathy__c.field-meta.xml
<CustomField>
    <fullName>Empathy__c</fullName>
    <label>Empathy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>