force-app/main/default/objects/Ireland_Coaching__c/fields/Empathy_Comment__c.field-meta.xml
<CustomField>
    <fullName>Empathy_Comment__c</fullName>
    <label>Empathy Comment</label>
    <type>TextArea</type>
</CustomField>