force-app/main/default/objects/Ireland_Coaching__c/fields/Features_Promoted__c.field-meta.xml
<CustomField>
    <fullName>Features_Promoted__c</fullName>
    <inlineHelpText>Where features promoted</inlineHelpText>
    <label>Features Promoted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>