force-app/main/default/objects/Ireland_Coaching__c/fields/Features_Promoted_Comment__c.field-meta.xml
<CustomField>
    <fullName>Features_Promoted_Comment__c</fullName>
    <inlineHelpText>Where features promoted comment</inlineHelpText>
    <label>Features Promoted Comment</label>
    <type>TextArea</type>
</CustomField>