force-app/main/default/objects/Ireland_Coaching__c/fields/Hold_Technique__c.field-meta.xml
<CustomField>
    <fullName>Hold_Technique__c</fullName>
    <description>Appropriate hold technique utilized</description>
    <label>Hold Technique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>