force-app/main/default/objects/Ireland_Coaching__c/fields/Hold_Technique_Comment__c.field-meta.xml
<CustomField>
    <fullName>Hold_Technique_Comment__c</fullName>
    <inlineHelpText>Appropriate hold technique utilized comment</inlineHelpText>
    <label>Hold Technique Comment</label>
    <type>TextArea</type>
</CustomField>