force-app/main/default/objects/Ireland_Coaching__c/fields/Identification_of_Customer_Issue__c.field-meta.xml
<CustomField>
    <fullName>Identification_of_Customer_Issue__c</fullName>
    <inlineHelpText>Identifies the customer issue: /Identification of customer issue</inlineHelpText>
    <label>Identification of Customer Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>