force-app/main/default/objects/Ireland_Coaching__c/fields/Identification_of_Customer_Issue_Comment__c.field-meta.xml
<CustomField>
    <fullName>Identification_of_Customer_Issue_Comment__c</fullName>
    <inlineHelpText>Identifies the customer issue: /Identification of customer issue Comment</inlineHelpText>
    <label>Identification of Customer Issue Comment</label>
    <type>TextArea</type>
</CustomField>