force-app/main/default/objects/Ireland_Coaching__c/fields/Listened_Appropriately__c.field-meta.xml
<CustomField>
    <fullName>Listened_Appropriately__c</fullName>
    <inlineHelpText>Listened appropriately to the customer</inlineHelpText>
    <label>Listened Appropriately</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>