force-app/main/default/objects/Ireland_Coaching__c/fields/Listened_Appropriately_Comment__c.field-meta.xml
<CustomField>
    <fullName>Listened_Appropriately_Comment__c</fullName>
    <inlineHelpText>Listened appropriately to the customer comment</inlineHelpText>
    <label>Listened Appropriately Comment</label>
    <type>TextArea</type>
</CustomField>