force-app/main/default/objects/Ireland_Coaching__c/fields/Made_Requested_Changes__c.field-meta.xml
<CustomField>
    <fullName>Made_Requested_Changes__c</fullName>
    <inlineHelpText>Made the requested changes correctly  / Made requested changes</inlineHelpText>
    <label>Made Requested Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>