force-app/main/default/objects/Ireland_Coaching__c/fields/Made_Requested_Changes_Comment__c.field-meta.xml
<CustomField>
    <fullName>Made_Requested_Changes_Comment__c</fullName>
    <inlineHelpText>Made the requested changes correctly  / Made requested changes comment</inlineHelpText>
    <label>Made Requested Changes Comment</label>
    <type>TextArea</type>
</CustomField>