force-app/main/default/objects/Ireland_Coaching__c/fields/Maintains_Call_Control__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Call_Control__c</fullName>
    <inlineHelpText>Establishes and maintains call control</inlineHelpText>
    <label>Maintains Call Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>