force-app/main/default/objects/Ireland_Coaching__c/fields/Maintains_Call_Control_Comment__c.field-meta.xml
<CustomField>
    <fullName>Maintains_Call_Control_Comment__c</fullName>
    <inlineHelpText>Establishes and maintains call control comment</inlineHelpText>
    <label>Maintains Call Control Comment</label>
    <type>TextArea</type>
</CustomField>