force-app/main/default/objects/Ireland_Coaching__c/fields/Offer_Made_Comment__c.field-meta.xml
<CustomField>
    <fullName>Offer_Made_Comment__c</fullName>
    <inlineHelpText>What offer was made comment</inlineHelpText>
    <label>Offer Made Comment</label>
    <type>TextArea</type>
</CustomField>