force-app/main/default/objects/Ireland_Coaching__c/fields/Offer_Status_Comment__c.field-meta.xml
<CustomField>
    <fullName>Offer_Status_Comment__c</fullName>
    <inlineHelpText>Did Customer accept or decline offer /Offer Status comment</inlineHelpText>
    <label>Offer Status Comment</label>
    <type>TextArea</type>
</CustomField>