force-app/main/default/objects/Ireland_Coaching__c/fields/Overall_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Overall_Confidence__c</fullName>
    <label>Overall Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>