force-app/main/default/objects/Ireland_Coaching__c/fields/Overall_Confidence_Comment__c.field-meta.xml
<CustomField>
    <fullName>Overall_Confidence_Comment__c</fullName>
    <label>Overall Confidence Comment</label>
    <type>TextArea</type>
</CustomField>