force-app/main/default/objects/Ireland_Coaching__c/fields/Pace_of_the_Call__c.field-meta.xml
<CustomField>
    <fullName>Pace_of_the_Call__c</fullName>
    <inlineHelpText>Pace of the call, avoids dead air, doesn’t rush the call</inlineHelpText>
    <label>Pace of the Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>