force-app/main/default/objects/Ireland_Coaching__c/fields/Pace_of_the_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Pace_of_the_Call_Comment__c</fullName>
    <inlineHelpText>Pace of the call, avoids dead air, doesn’t rush the call comment</inlineHelpText>
    <label>Pace of the Call Comment</label>
    <type>TextArea</type>
</CustomField>