force-app/main/default/objects/Ireland_Coaching__c/fields/Perception_of_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Perception_of_Advisor__c</fullName>
    <inlineHelpText>Overall perception of the advisor</inlineHelpText>
    <label>Perception of Advisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>