force-app/main/default/objects/Ireland_Coaching__c/fields/Perception_of_Advisor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Perception_of_Advisor_Comment__c</fullName>
    <inlineHelpText>Overall perception of the advisor comment</inlineHelpText>
    <label>Perception of Advisor Comment</label>
    <type>TextArea</type>
</CustomField>