force-app/main/default/objects/Ireland_Coaching__c/fields/Perception_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Perception_of_Customer__c</fullName>
    <inlineHelpText>Overall perception of the customer</inlineHelpText>
    <label>Perception of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open &amp; Engaged</fullName>
            </value>
            <value>
                <fullName>Closed &amp; Not Engaged</fullName>
            </value>
            <value>
                <fullName>Irate</fullName>
            </value>
            <value>
                <fullName>Other - See Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>