force-app/main/default/objects/Ireland_Coaching__c/fields/Perception_of_Customer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Perception_of_Customer_Comment__c</fullName>
    <inlineHelpText>Overall perception of the customer comment</inlineHelpText>
    <label>Perception of Customer Comment</label>
    <type>TextArea</type>
</CustomField>