force-app/main/default/objects/Ireland_Coaching__c/fields/Perception_of_the_Call__c.field-meta.xml
<CustomField>
    <fullName>Perception_of_the_Call__c</fullName>
    <inlineHelpText>Overall perception of the call</inlineHelpText>
    <label>Perception of the Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>