force-app/main/default/objects/Ireland_Coaching__c/fields/Perception_of_the_Call_Comment__c.field-meta.xml
<CustomField>
    <fullName>Perception_of_the_Call_Comment__c</fullName>
    <inlineHelpText>Overall perception of the call comment</inlineHelpText>
    <label>Perception of the Call Comment</label>
    <type>TextArea</type>
</CustomField>