force-app/main/default/objects/Ireland_Coaching__c/fields/Pitched_Well__c.field-meta.xml
<CustomField>
    <fullName>Pitched_Well__c</fullName>
    <inlineHelpText>Where they pitched well and correctly</inlineHelpText>
    <label>Pitched Well</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>