force-app/main/default/objects/Ireland_Coaching__c/fields/Pitched_Well_Comment__c.field-meta.xml
<CustomField>
    <fullName>Pitched_Well_Comment__c</fullName>
    <inlineHelpText>Where they pitched well and correctly comment</inlineHelpText>
    <label>Pitched Well Comment</label>
    <type>TextArea</type>
</CustomField>