force-app/main/default/objects/Ireland_Coaching__c/fields/Promote_Other_Products__c.field-meta.xml
<CustomField>
    <fullName>Promote_Other_Products__c</fullName>
    <inlineHelpText>Did advisor cross promote other products</inlineHelpText>
    <label>Promote Other Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>