force-app/main/default/objects/Ireland_Coaching__c/fields/Promote_Other_Products_Comment__c.field-meta.xml
<CustomField>
    <fullName>Promote_Other_Products_Comment__c</fullName>
    <inlineHelpText>Did advisor cross promote other products comment</inlineHelpText>
    <label>Promote Other Products Comment</label>
    <type>TextArea</type>
</CustomField>