force-app/main/default/objects/Ireland_Coaching__c/fields/Proper_Closing__c.field-meta.xml
<CustomField>
    <fullName>Proper_Closing__c</fullName>
    <inlineHelpText>Proper closing done, was this done? (thank you for calling, brand name etc)</inlineHelpText>
    <label>Proper Closing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>