force-app/main/default/objects/Ireland_Coaching__c/fields/Proper_Closing_Comment__c.field-meta.xml
<CustomField>
    <fullName>Proper_Closing_Comment__c</fullName>
    <inlineHelpText>Proper closing done, was this done? (thank you for calling, brand name etc) comment</inlineHelpText>
    <label>Proper Closing Comment</label>
    <type>TextArea</type>
</CustomField>