force-app/main/default/objects/Ireland_Coaching__c/fields/Proper_Opening__c.field-meta.xml
<CustomField>
    <fullName>Proper_Opening__c</fullName>
    <inlineHelpText>Proper opening (Salutation, advisor name, name of product)</inlineHelpText>
    <label>Proper Opening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>