force-app/main/default/objects/Ireland_Coaching__c/fields/Proper_Opening_Comment__c.field-meta.xml
<CustomField>
    <fullName>Proper_Opening_Comment__c</fullName>
    <inlineHelpText>Proper opening (Salutation, advisor name, name of product)</inlineHelpText>
    <label>Proper Opening Comment</label>
    <type>TextArea</type>
</CustomField>