force-app/main/default/objects/Ireland_Coaching__c/fields/Provide_a_Salesforce_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Provide_a_Salesforce_Ref_Number__c</fullName>
    <inlineHelpText>Did the advisor provide a salesforce ref number</inlineHelpText>
    <label>Provide a Salesforce Ref Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>