force-app/main/default/objects/Ireland_Coaching__c/fields/Provide_a_Salesforce_Ref_Number_Comment__c.field-meta.xml
<CustomField>
    <fullName>Provide_a_Salesforce_Ref_Number_Comment__c</fullName>
    <inlineHelpText>Did the advisor provide a salesforce ref number</inlineHelpText>
    <label>Provide a Salesforce Ref Number Comment</label>
    <type>TextArea</type>
</CustomField>