force-app/main/default/objects/Ireland_Coaching__c/fields/Provides_Call_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Provides_Call_Resolution__c</fullName>
    <inlineHelpText>Provides proper call resolution</inlineHelpText>
    <label>Provides Call Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>