force-app/main/default/objects/Ireland_Coaching__c/fields/Provides_Call_Resolution_Comment__c.field-meta.xml
<CustomField>
    <fullName>Provides_Call_Resolution_Comment__c</fullName>
    <inlineHelpText>Provides proper call resolution comment</inlineHelpText>
    <label>Provides Call Resolution Comment</label>
    <type>TextArea</type>
</CustomField>