force-app/main/default/objects/Ireland_Coaching__c/fields/Recaps_on_Issue_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Recaps_on_Issue_Resolution__c</fullName>
    <description>Did advisor recaps on the issue resolution</description>
    <label>Recaps on Issue Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>