force-app/main/default/objects/Ireland_Coaching__c/fields/Recaps_on_Issue_Resolution_Comment__c.field-meta.xml
<CustomField>
    <fullName>Recaps_on_Issue_Resolution_Comment__c</fullName>
    <inlineHelpText>Did advisor recaps on the issue resolution comment</inlineHelpText>
    <label>Recaps on Issue Resolution Comment</label>
    <type>TextArea</type>
</CustomField>